@@ -129,6 +129,7 @@
 #define AF_RESOLVE_IP_FOR_EACH_STATUS_POLL     _ULL(0x0000000080000000)
 #define AF_PERFDATA_STORAGE_DRIVER_LOADED      _ULL(0x0000000100000000)
 #define AF_BACKGROUND_LOG_WRITER               _ULL(0x0000000200000000)
+#define AF_CASE_INSENSITIVE_LOGINS             _ULL(0x0000000400000000)
 #define AF_SERVER_INITIALIZED                  _ULL(0x4000000000000000)
 #define AF_SHUTDOWN                            _ULL(0x8000000000000000)
 
